drum js file changed

--- a/key/index.html
+++ b/key/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Javascript30-- Day 1</title>
+		<title>Javascript30-- KeyCode</title>
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
